--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,47 @@
 version: '3'
 services:
-  web-app:
+  paperless-rest:
     build: .
     ports:
-      - "8080:8080"
+      - "8081:8080"
     container_name: dms-app-container
+
+  paperless-broker:
+    image: redis:6.0
+    restart: unless-stopped
+
+  paperless-db:
+    image: postgres:13
+    restart: unless-stopped
+    volumes:
+      - /opt/docker-prod/paperless/pgdata:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_DB: paperless
+      POSTGRES_USER: paperless
+      POSTGRES_PASSWORD: paperless
+
+  webserver:
+    image: ghcr.io/paperless-ngx/paperless-ngx:latest
+    ports:
+      - "80:8000"
+    restart: unless-stopped
+    depends_on:
+      - paperless-db
+      - paperless-broker
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    volumes:
+      - /opt/docker-prod/paperless/data:/usr/src/paperless/data
+      - /opt/docker-prod/paperless/media:/usr/src/paperless/media
+    # env_file: docker-compose.env
+    environment:
+      PAPERLESS_REDIS: redis://paperless-broker:6379
+      PAPERLESS_DBHOST: paperless-db
+      PAPERLESS_URL: http://localhost
+      PAPERLESS_OCR_LANGUAGE: deu
+      PAPERLESS_TIME_ZONE: Europe/Berlin
