--- a/paperless-rest/src/test/resources/application-test.properties
+++ b/paperless-rest/src/test/resources/application-test.properties
@@ -1,7 +1,7 @@
 #spring.jackson.date-format=at.fhtw.swen3.RFC3339DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 
-spring.datasource.url=jdbc:h2:mem:paperlessdb
+spring.datasource.url=jdbc:h2:mem:paperless
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
