--- a/paperless-rest/src/main/resources/application.properties
+++ b/paperless-rest/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 springdoc.api-docs.path=/docs/api
 springdoc.swagger-ui.path=/docs/swaggerui
 
-spring.datasource.url=jdbc:postgresql://paperless-db:5432/paperlessdb
+spring.datasource.url=jdbc:postgresql://paperless-db:5432/paperless
 spring.datasource.username=paperless
 spring.datasource.password=paperless
 spring.jpa.show-sql=true
