Adding RabbitMQ implementation of Martin

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,5 +28,15 @@ services:
     ports:
       - "80:80"
 
+  rabbitmq:
+    image: rabbitmq:management
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: rabbitmq
+      RABBITMQ_DEFAULT_PASS: rabbitmq
+
 volumes:
   paperless-db-data:
