--- a/paperless-rest/src/main/resources/application.properties
+++ b/paperless-rest/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.jpa.show-sql=true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = create-drop
+
+# Rabbit MQ
+spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=rabbitmq
+spring.rabbitmq.password=rabbitmq
