--- a/paperless-ui/Dockerfile
+++ b/paperless-ui/Dockerfile
@@ -8,8 +8,8 @@ COPY ./index.html /usr/share/nginx/html/
 #COPY ./nginx.conf /etc/nginx/conf.d/default.conf
 #COPY ./assets /usr/share/nginx/html/assets/
 #COPY ./css /usr/share/nginx/html/css/
-#COPY ./js /usr/share/nginx/html/js/
-#COPY ./pages /usr/share/nginx/html/pages/
+COPY ./js /usr/share/nginx/html/js/
+COPY ./pages /usr/share/nginx/html/pages/
 
 EXPOSE 80
 
