upload file -> put into rabbitMQ(message queue) -> consumer consumes from the queue -> save into DB

--- a/paperless-rest/src/main/resources/application.properties
+++ b/paperless-rest/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto = create-drop
 
 # Rabbit MQ
+rabbitmq.queue=File.Queue
 spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=rabbitmq
