--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,31 @@ services:
       context: ./paperless-rest
       dockerfile: Dockerfile
     ports:
-      - "8081:8080"
+      - "8081:8080" # Maps host port 8081 to container port 8080
     container_name: dms-app-container
+    environment:
+      SPRING_RABBITMQ_HOST: rabbitmq # RabbitMQ hostname
+      SPRING_RABBITMQ_PORT: 5672
+      SPRING_DATASOURCE_URL: jdbc:postgresql://paperless-db:5432/paperless
+      SPRING_DATASOURCE_USERNAME: paperless
+      SPRING_DATASOURCE_PASSWORD: paperless
+    depends_on:
+      - paperless-db
+      - rabbitmq
+
+  paperless-worker:
+    build:
+      context: ./paperless-services
+      dockerfile: Dockerfile
+    container_name: paperless-worker-container
+    environment:
+      SPRING_RABBITMQ_HOST: rabbitmq
+      SPRING_RABBITMQ_PORT: 5672
+      REST_SERVICE_URL: http://paperless-rest:8080
+    ports:
+      - "8082:8082"
+    depends_on:
+      - rabbitmq
 
   paperless-db:
     build: paperless-db/.
@@ -27,6 +50,7 @@ services:
       dockerfile: Dockerfile
     ports:
       - "80:80"
+    container_name: paperless-ui-container
 
   rabbitmq:
     image: rabbitmq:management
