--- a/paperless-services/src/main/resources/application.properties
+++ b/paperless-services/src/main/resources/application.properties
@@ -2,10 +2,15 @@
 server.port=8082
 
 # RabbitMQ Configuration
-spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.host=${SPRING_RABBITMQ_HOST:rabbitmq}
 spring.rabbitmq.port=${SPRING_RABBITMQ_PORT:5672}
-spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME:paperless}
-spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD:paperless}
+spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME:rabbitmq}
+spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD:rabbitmq}
+
+# Database Configuration
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://paperless-db:5432/paperless}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:paperless}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:paperless}
 
 # RabbitMQ Queues
 queue.input=OCR_QUEUE
