--- a/paperless-services/pom.xml
+++ b/paperless-services/pom.xml
@@ -103,6 +103,14 @@
             <artifactId>tess4j</artifactId>
             <version>4.5.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.6.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
