--- a/paperless-rest/src/main/resources/application.properties
+++ b/paperless-rest/src/main/resources/application.properties
@@ -1,17 +1,32 @@
 # Server Configuration
 server.port=8080
+
 # SpringDoc Configuration
 springdoc.api-docs.path=/docs/api
 springdoc.swagger-ui.path=/docs/swaggerui
+
+# DataSource Configuration (PostgreSQL)
 spring.datasource.url=jdbc:postgresql://paperless-db:5432/paperless
 spring.datasource.username=paperless
 spring.datasource.password=paperless
 spring.jpa.show-sql=true
-# Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=create-drop
-# Rabbit MQ
-rabbitmq.queue=File.Queue
+
+# RabbitMQ Configuration
 spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=rabbitmq
-spring.rabbitmq.password=rabbitmq
+spring.rabbitmq.username=paperless
+spring.rabbitmq.password=paperless
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.initial-interval=2000
+spring.rabbitmq.listener.simple.retry.max-attempts=5
+spring.rabbitmq.listener.simple.retry.multiplier=2
+spring.rabbitmq.listener.simple.default-requeue-rejected=false
+spring.rabbitmq.listener.simple.missing-queues-fatal=false
+spring.rabbitmq.connection-timeout=5000
+spring.rabbitmq.publisher-confirm-type=correlated
+spring.rabbitmq.publisher-returns=true
+
+# Queue names
+queue.input=OCR_QUEUE
+queue.output=RESULT_QUEUE
