--- a/paperless-rest/Dockerfile
+++ b/paperless-rest/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:17-jdk-alpine
 WORKDIR /app
-COPY target/PaperlessREST-0.0.1-SNAPSHOT.jar paperless-rest.jar
+COPY target/DMS-0.0.1-SNAPSHOT.jar paperless-rest.jar
 EXPOSE 8081
 ENTRYPOINT ["java", "-jar", "paperless-rest.jar"]
