--- a/paperless-rest/src/main/resources/application.properties
+++ b/paperless-rest/src/main/resources/application.properties
@@ -1,21 +1,42 @@
-# Server Configuration
-server.port=8080
+# Port
+server.port=8081
 
-# SpringDoc Configuration
-springdoc.api-docs.path=/docs/api
-springdoc.swagger-ui.path=/docs/swaggerui
+# Swagger
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
 
-spring.datasource.url=jdbc:postgresql://paperless-db:5432/paperless
-spring.datasource.username=paperless
-spring.datasource.password=paperless
+# File Upload Settings
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# Database (Default for Local)
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/paperless_DB}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:paperless}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:paperless}
+
+# Hibernate configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
 
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create-drop
-
-# Rabbit MQ
-rabbitmq.queue=File.Queue
+# RabbitMQ
 spring.rabbitmq.host=rabbitmq
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=rabbitmq
-spring.rabbitmq.password=rabbitmq
+spring.rabbitmq.port=${SPRING_RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME:paperless}
+spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD:paperless}
+
+# Logging
+logging.file.name=
+logging.level.root=INFO
+
+# MinIO
+minio.url=http://minio:9000
+minio.access-key=paperless
+minio.secret-key=paperless
+minio.bucket-name=documents
+
+# Elasticsearch Config
+spring.elasticsearch.uris=http://elasticsearch:9200
