--- a/paperless-services/pom.xml
+++ b/paperless-services/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>org.technikum</groupId>
-    <artifactId>PaperlessWORKER</artifactId>
+    <artifactId>paperless-services</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>PaperlessWORKER</name>
-    <description>PaperlessWORKER</description>
+    <name>paperless-services</name>
+    <description>paperless-services</description>
     <url/>
     <licenses>
         <license/>
@@ -82,10 +82,6 @@
             <groupId>co.elastic.clients</groupId>
             <artifactId>elasticsearch-java</artifactId>
             <version>8.10.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
     </dependencies>
