--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,28 +80,30 @@ services:
       - paperless-network
 
   paperless-services:
-    build:
-      context: ./paperless-services
-      dockerfile: Dockerfile
-    container_name: paperless-services
-    environment:
-      SPRING_RABBITMQ_HOST: rabbitmq
-      SPRING_RABBITMQ_PORT: 5672
-      SPRING_RABBITMQ_USERNAME: paperless
-      SPRING_RABBITMQ_PASSWORD: paperless
-      MINIO_URL: http://minio:9000
-      MINIO_ACCESS_KEY: paperless
-      MINIO_SECRET_KEY: paperless
-      RABBITMQ_PROCESSING_QUEUE: document_processing_queue
-      RABBITMQ_RESULT_QUEUE: document_result_queue
-    ports:
-      - "8082:8082"
-    depends_on:
-      - rabbitmq
-      - minio
-      - elasticsearch
-    networks:
-      - paperless-network
+      build:
+        context: ./paperless-services
+        dockerfile: Dockerfile
+      container_name: paperless-services
+      environment:
+        SPRING_RABBITMQ_HOST: rabbitmq
+        SPRING_RABBITMQ_PORT: 5672
+        SPRING_RABBITMQ_USERNAME: paperless
+        SPRING_RABBITMQ_PASSWORD: paperless
+        MINIO_URL: http://minio:9000
+        MINIO_ACCESS_KEY: paperless
+        MINIO_SECRET_KEY: paperless
+        RABBITMQ_PROCESSING_QUEUE: document_processing_queue
+        RABBITMQ_RESULT_QUEUE: document_result_queue
+      ports:
+        - "8082:8082"
+      volumes:
+        - ./tessdata:/usr/share/tesseract-ocr/4.0/tessdata
+      depends_on:
+        - rabbitmq
+        - minio
+        - elasticsearch
+      networks:
+        - paperless-network
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.10.2
